statement update and spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ p {
 }
 
 #pMove {
-    padding: 10px 0px 10px 0px;
+    padding: 20px 0px 0px 0px;
 }
 
 #textBackG {
@@ -180,11 +180,13 @@ p {
     border-color: #bffc7a;
     border-width: 5px;
     margin: 10px 0px 20px 0px;
+    padding: 20px, 10px, 0px, 10px;
 }
 
 .photo {
     float: left;
     margin-right: 20px;
+    margin-top: 20px;
     
     
 }
